# NipTuck

./: .gitignore  .project  NipTuck.cabal  README.md  startGHCi
Test/: Test.hs
src/: Layout.hs  Main.hs
